@@ -1,133 +1,178 @@
 <?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-interface SYSTEM "../glade-2.0.dtd" >
+<!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
-  <requires lib="bonobo"/>
+<requires lib="bonobo"/>
 
-  <widget class="GtkDialog" id="window1">
-    <property name="title" translatable="yes">Gtk+ Theme</property>
-    <property name="visible">yes</property>
+<widget class="GtkDialog" id="window1">
+  <property name="visible">True</property>
+  <property name="title" translatable="yes">Gtk+ Theme</property>
+  <property name="type">GTK_WINDOW_TOPLEVEL</property>
+  <property name="window_position">GTK_WIN_POS_NONE</property>
+  <property name="modal">False</property>
+  <property name="resizable">True</property>
+  <property name="destroy_with_parent">False</property>
+  <property name="has_separator">True</property>
+  <signal name="destroy" handler="gtk_main_quit"/>
+  <signal name="response" handler="response_cb"/>
 
-    <signal name="destroy" handler="gtk_main_quit" />
-    <signal name="response" handler="response_cb" />
-    
-    <child internal-child="vbox">
-      <widget class="GtkVBox" id="vbox1">
-        <property name="spacing">4</property>
-        <child>
-	  <widget class="GtkFrame" id="frame1">
-	    <property name="label" translatable="yes">Available Themes</property>
-	    <property name="visible">yes</property>
-	    
-	    <child>
-	      <widget class="GtkHBox" id="hbox1">
-	        <property name="homogeneous">no</property>
-		<property name="spacing">4</property>
-		<property name="border_width">4</property>
-		<property name="visible">yes</property>
-		<child>
-		  <widget class="GtkScrolledWindow" id="scrolled1">
-		    <property name="hscrollbar_policy">automatic</property>
-		    <property name="vscrollbar_policy">automatic</property>
-		    <property name="shadow_type">in</property>
-		    <property name="visible">yes</property>
-		    <child>
-		      <widget class="GtkTreeView" id="tree1">
-		        <property name="headers_visible">no</property>
-		        <property name="visible">yes</property>
+  <child internal-child="vbox">
+    <widget class="GtkVBox" id="vbox1">
+      <property name="border_width">2</property>
+      <property name="homogeneous">False</property>
+      <property name="spacing">4</property>
 
-			<signal name="cursor_changed" handler="call_apply" />
-		      </widget>
-		    </child>
-		  </widget>
-		  <packing>
-		     <property name="expand">yes</property>
-		     <property name="fill">yes</property>
-		  </packing>
-		 </child>
-		 <child>
-		   <widget class="GtkVBox" id="vbox2">
-		     <property name="homogeneous">no</property>
-		     <property name="spacing">4</property>
-		     <property name="visible">yes</property>
-		     <child>
-		       <widget class="GtkCheckButton" id="check1">
-		         <property name="label" translatable="yes">Auto Preview</property>
-		         <property name="visible">yes</property>
-			 <signal name="toggled" handler="preview_toggled_cb" />
-		       </widget>
-		       <packing>
-		         <property name="expand">no</property>
-		       </packing>
-		     </child>
-		     <child>
-		       <widget class="GtkButton" id="button3">
-		         <property name="label" translatable="yes">Preview</property>
-		         <property name="visible">yes</property>
-			 <signal name="clicked" handler="preview_cb" />
-		       </widget>
-		       <packing>
-		         <property name="expand">no</property>
-		       </packing>
-		     </child>
-		     <child>
-		       <widget class="GtkButton" id="button4">
-		         <property name="label" translatable="yes">Install new theme...</property>
-		         <property name="visible">yes</property>
-			 <signal name="clicked" handler="install_cb" />
-		       </widget>
-		       <packing>
-		         <property name="expand">no</property>
-		       </packing>
-		     </child>
-		   </widget>
-		   <packing>
-		     <property name="expand">no</property>
-		   </packing>
-		 </child>
-	       </widget>
-	     </child>
-	   </widget>
-	</child>
-        <child>
-	  <widget class="GtkFrame" id="frame2">
-	    <property name="label" translatable="yes">Preview</property>
-	    <property name="visible">yes</property>
-	    <child>
-	      <widget class="GtkHBox" id="hbox2">
-  	        <property name="border_width">4</property>
-	        <property name="visible">yes</property>
-		<child>
-	          <widget class="GtkFrame" id="frame3">
-	            <property name="visible">yes</property>
-	    	    <property name="shadow_type">in</property>
-		    <child>
-                      <widget class="BonoboWidget" id="control1">
-                        <property name="moniker">OAFIID:GNOME_Theme_Preview</property>
-                        <property name="visible">yes</property>
-                      </widget>
-		    </child>
-	          </widget>
-	        </child>
-	      </widget>
-	    </child>
-	  </widget>
-        </child>
-      </widget>
-    </child> 
+      <child internal-child="action_area">
+	<widget class="GtkHButtonBox" id="buttonbox1">
+	  <property name="border_width">5</property>
+	  <property name="layout_style">GTK_BUTTONBOX_END</property>
+	  <property name="spacing">10</property>
 
-    <child internal-child="action_area">
-      <widget class="GtkHButtonBox" id="buttonbox1">
-	<child>
-          <widget class="GtkButton" id="button1">
-            <property name="label">gtk-close</property>
-            <property name="use_stock">yes</property>
-            <property name="use_underline">yes</property>
-            <property name="response_id">2</property>
-            <property name="visible">yes</property>
-          </widget>
-        </child>
-      </widget>
-    </child> 
-  </widget>
+	  <child>
+	    <widget class="GtkButton" id="button1">
+	      <property name="visible">True</property>
+	      <property name="label">gtk-close</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="response_id">2</property>
+	    </widget>
+	  </child>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">True</property>
+	  <property name="pack_type">GTK_PACK_END</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkFrame" id="frame1">
+	  <property name="visible">True</property>
+	  <property name="label_xalign">0</property>
+	  <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
+
+	  <child>
+	    <widget class="GtkHBox" id="hbox1">
+	      <property name="border_width">4</property>
+	      <property name="visible">True</property>
+	      <property name="homogeneous">False</property>
+	      <property name="spacing">4</property>
+
+	      <child>
+		<widget class="GtkScrolledWindow" id="scrolled1">
+		  <property name="visible">True</property>
+		  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+		  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+		  <property name="shadow_type">GTK_SHADOW_NONE</property>
+		  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
+
+		  <child>
+		    <widget class="GtkTreeView" id="tree1">
+		      <property name="visible">True</property>
+		      <property name="headers_visible">False</property>
+		      <property name="rules_hint">False</property>
+		      <property name="reorderable">False</property>
+		      <property name="enable_search">True</property>
+		    </widget>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">True</property>
+		  <property name="fill">True</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkVBox" id="vbox2">
+		  <property name="visible">True</property>
+		  <property name="homogeneous">False</property>
+		  <property name="spacing">4</property>
+
+		  <child>
+		    <placeholder/>
+		  </child>
+
+		  <child>
+		    <placeholder/>
+		  </child>
+
+		  <child>
+		    <widget class="GtkButton" id="button4">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Install new theme...</property>
+		      <property name="use_underline">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <signal name="clicked" handler="install_cb"/>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">True</property>
+		    </packing>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">False</property>
+		  <property name="fill">True</property>
+		</packing>
+	      </child>
+	    </widget>
+	  </child>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">True</property>
+	  <property name="fill">True</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkFrame" id="frame2">
+	  <property name="visible">True</property>
+	  <property name="label_xalign">0</property>
+	  <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
+
+	  <child>
+	    <widget class="GtkHBox" id="hbox2">
+	      <property name="border_width">4</property>
+	      <property name="visible">True</property>
+	      <property name="homogeneous">False</property>
+	      <property name="spacing">0</property>
+
+	      <child>
+		<widget class="GtkFrame" id="frame3">
+		  <property name="visible">True</property>
+		  <property name="label_xalign">0</property>
+		  <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
+
+		  <child>
+		    <widget class="BonoboWidget" id="control1">
+		      <property name="visible">True</property>
+		      <property name="moniker">OAFIID:GNOME_Theme_Preview</property>
+		      <property name="theme"></property>
+		    </widget>
+		  </child>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">True</property>
+		  <property name="fill">True</property>
+		</packing>
+	      </child>
+	    </widget>
+	  </child>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">True</property>
+	  <property name="fill">True</property>
+	</packing>
+      </child>
+    </widget>
+  </child>
+</widget>
+
 </glade-interface>
