@@ -1,3 +1,9 @@
+2002-03-09  Richard Hestilow  <hestilow@ximian.com>
+	
+	* gtk-theme-selector.glade, main.c: Remove preview option
+	and button, this makes no sense with instant apply.
+	(select_cb): Just call apply_cb.
+	
 2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
